@@ -30,7 +30,7 @@ TOPSTACK 1
 # default tiling modes for each desktop(defaults to 0):
 #     0=vert,1=fullscreen,2=horiz,3=grid,4=stacking
 DEFAULTMODE 3;4;0;1;2;3;
-# Select monitor the bar will be on, not needed with on monitor
+# Select monitor the bar will be on, not needed with one monitor
 # BAR_MONITOR 1
 # For semi transparent unfocused windows if using a compositor e.g. compton
 UF_WIN_ALPHA 65
@@ -45,7 +45,9 @@ LEFT_WINDOWNAME 0
 WINDOWNAMELENGTH 35
 TOPBAR 0
 SHOW_BAR 0
+# Show the number of opened windows?
 SHOWNUMOPEN 1
+# How to display the current tiling mode in the bar
 MODENAME [V];[F];[H];[G];[C];
 DESKTOP_NAMES one;two;three;four;five;six;
 FONTNAME "-*-clean-*-*-*-*-14-*-*-*-*-*-*-*"
